- gnu: support DESTDIR variable
- added <define-global-tag> which can be used to define tags with global
  scope; this makes it easy to define new toplevel commands (based on patch
  by Francesco Montorsi)
- added <set-srcdir> for setting SRCDIR variable; it cannot be done manually
  anymore (Francesco Montorsi)
- fixed dependencies handling in bakefile_gen if fileList() is used


Version 0.2.0
--------------

- watcom: more platforms (OS/2, DOS) support
- autoconf: support IBM xlC compiler on Mac OS X
- autoconf: dependencies support for DEC/Compaq/HP cxx compiler (Vadim Zeitlin)
- autoconf: dependencies support for HP aCC compiler (Vadim Zeitlin)
- autoconf: dependencies support for SGI MIPSpro compiler (Vadim Zeitlin)
- autoconf: fixed shared libraries with gcc under AIX 5 (Vadim Zeitlin)
- autoconf: added support for Intel C/C++ compiler (Vadim Zeitlin)
  and its precompiled headers (based on Mattia Barbon's patch)
- win32 makefiles: fixed cleaning list of files (Francesco Montorsi)
- many improvements to the documentation (Warren Young)
- support for conditional installation of <subproject> targets
  (Francesco Montorsi)
- added fileList() function (loosely based on Francesco Montorsi's patch)
- dmars: don't pass pch file to resource compiler
- autoconf: added --disable-dependency-tracking
- added <echo> command (Francesco Montorsi)


Version 0.1.9.1
---------------

- msvc6prj: fixed handling of MSVC6PRJ_MERGED_TARGETS hack


Version 0.1.9
-------------

- dmars: fixed precompiled headers to not recompile everything
- mingw: added dependency tracking
- dmars: fixed subprojects
- don't escape \ in Python expressions
- fixed copy-files on Solaris (Michael Wetherell)
- added dependencies tracking for Sun CC (Michael Wetherell)
- msvc: fixed to work with free MS tools (Włodzimierz Skiba)
- new format (unfinished!): xcode2 for XCode project files (David Elliott)
- new format: symbian for Symbian tools (Włodzimierz Skiba)
- msevc4prj: support C++ exceptions